# datacarwashhospicetororo

./: .gitignore  README.md  example_parent_system.py  pyproject.toml  requirements.txt
config/: default.yaml
datacarwash/: __init__.py  cli.py  main.py
datacarwash/components/: __init__.py  deduplication.py  encryption.py  key_manager.py  normilization.py  uploadfile.py
models/: kobo_mapping.json
models/schemas/: README.md  disease.json  encounter.json  medical_record.json  observation.json  person.json  supply.json  treatment.json
tests/: __init__.py  test_pipeline.py
