[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datacarwash"
version = "0.1.0"
description = "A data processing pipeline - data comes in dirty, leaves clean and orderly"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "cryptography>=41.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "click>=8.1.0",
    "tqdm>=4.65.0",
    "colorlog>=6.7.0",
]

[project.scripts]
datacarwash = "datacarwash.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["datacarwash*"]
